# aie5-midterm

./: Dockerfile  README.md  app.py  embedding_fine_tune.ipynb  hello.py  pyproject.toml  ragas_evaluation.ipynb
